src/tests/snapshots/nitrocli__tests__run__nitrocli_otp_get_--help.snap
---
source: src/tests/run.rs
expression: s

---
nitrocli-otp-get 

Generates a one-time password

USAGE:
    nitrocli otp get [OPTIONS] <SLOT>

ARGS:
    <SLOT>    The OTP slot to use

OPTIONS:
    -a, --algorithm <ALGORITHM>
            The OTP algorithm to use [default: totp] [possible values: hotp, totp]

    -h, --help
            Print help information

    -m, --model <MODEL>
            Selects the device model to connect to [possible values: librem, pro, storage]

        --no-cache
            Disables the cache for all secrets

        --serial-number <SERIAL_NUMBERS>
            Sets the serial number of the device to connect to. Can be set multiple times to allow
            multiple serial numbers

    -t, --time <TIME>
            The time to use for TOTP generation (Unix timestamp) [default: system time]

        --usb-path <USB_PATH>
            Sets the USB path of the device to connect to

    -v, --verbose
            Increases the log level (can be supplied multiple times)


