src/tests/snapshots/nitrocli__tests__run__nitrocli_otp_get_-h.snap
---
source: src/tests/run.rs
expression: s

---
nitrocli-otp-get 0.4.1
Generates a one-time password

USAGE:
    nitrocli otp get [FLAGS] [OPTIONS] <slot>

FLAGS:
    -h, --help        Prints help information
        --no-cache    Disables the cache for all secrets
    -V, --version     Prints version information
    -v, --verbose     Increases the log level (can be supplied multiple times)

OPTIONS:
    -a, --algorithm <algorithm>                The OTP algorithm to use [default: totp]  [possible values: hotp, totp]
    -m, --model <model>                        Selects the device model to connect to [possible values: librem, pro,
                                               storage]
        --serial-number <serial-numbers>...    Sets the serial number of the device to connect to. Can be set multiple
                                               times to allow multiple serial numbers
    -t, --time <time>                          The time to use for TOTP generation (Unix timestamp) [default: system
                                               time]
        --usb-path <usb-path>                  Sets the USB path of the device to connect to

ARGS:
    <slot>    The OTP slot to use

