src/tests/snapshots/nitrocli__tests__run__nitrocli_pin_-h.snap
---
source: src/tests/run.rs
expression: s

---
nitrocli-pin 0.4.1
Manages the Nitrokey PINs

USAGE:
    nitrocli pin [FLAGS] [OPTIONS] <SUBCOMMAND>

FLAGS:
    -h, --help        Prints help information
        --no-cache    Disables the cache for all secrets
    -V, --version     Prints version information
    -v, --verbose     Increases the log level (can be supplied multiple times)

OPTIONS:
    -m, --model <model>                        Selects the device model to connect to [possible values: librem, pro,
                                               storage]
        --serial-number <serial-numbers>...    Sets the serial number of the device to connect to. Can be set multiple
                                               times to allow multiple serial numbers
        --usb-path <usb-path>                  Sets the USB path of the device to connect to

SUBCOMMANDS:
    clear      Clears the cached PINs
    help       Prints this message or the help of the given subcommand(s)
    set        Changes a PIN
    unblock    Unblocks and resets the user PIN

